[tool.poetry]
name = "clismo"
version = "0.1.0"
description = "Programing language designed por simulating and optimizing client-server like discret events models"
authors = [
	"Jorge Morgado Vega <jorge.morgadov@gmail.com>",
	"Roberto García Rodriguez <robegr42@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clismo = 'clismo.main:app'
